--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,9 @@ body {
   -webkit-box-shadow: -2000px 200px 0px 196px rgba(0,0,0,0.71) inset;
   -moz-box-shadow: -2000px 200px 0px 196px rgba(0,0,0,0.71) inset;
 }
+
+@media (min-width: 1180px) and (max-width:1465px) {
+  .container-cards {
+    justify-content: center !important;
+  }
+}
