--- a/src/index.css
+++ b/src/index.css
@@ -91,14 +91,29 @@ body {
   }
 }
 
+/* filtro para el detalle de la pelicula*/
 .filter {
   box-shadow: 200px 200px 0px 196px rgba(0,0,0,0.71) inset;
   -webkit-box-shadow: -2000px 200px 0px 196px rgba(0,0,0,0.71) inset;
   -moz-box-shadow: -2000px 200px 0px 196px rgba(0,0,0,0.71) inset;
 }
 
+/* media query para los contenedores de cards */
 @media (min-width: 1180px) and (max-width:1465px) {
   .container-cards {
     justify-content: center !important;
   }
+}
+
+/* Bordes personalizados */
+.nav-border {
+  box-shadow: 0px 3px 13px 0px rgba(255,0,0,0.75) !important;
+-webkit-box-shadow: 0px 3px 13px 0px rgba(255,0,0,0.75) !important;
+-moz-box-shadow: 0px 3px 13px 0px rgba(255,0,0,0.75) !important;
+}
+
+.footer-border {
+  box-shadow: 0px -3px 6px 0px rgba(255,0,0,0.75) !important;
+  -webkit-box-shadow: 0px -3px 6px 0px rgba(255,0,0,0.75) !important;
+  -moz-box-shadow: 0px -3px 6px 0px rgba(255,0,0,0.75) !important;
 }
