--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,20 @@ body {
 .boxes-movies {
   max-height: 600px;
   overflow: scroll;
-  padding-top: 0 !important;
+  padding: 0 !important;
 }
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background-color: #1e1e1e;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #373636;
+  border-radius: 6px;
+}
+
 
 /* Spinner */
 
